--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<%= stylesheet_link_tag 'index' %>
+
+<h3>New book</h3>
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
+
+<div class="new-title">
+  <label>Title</label>
+  <%= f.text_field :title %>
+</div>
+
+<div class="new-body">
+  <ladel>Body</label>
+  <%= f.text_area :body %>
+</div>
+
+<div class="new-submit">
+  <%= f.submit 'Create Book' %>
+</div>
+<% end %>
+
