--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,9 +3,9 @@
   </head>
   <body>
     <h1>ようこそ　<strong>Bookes</strong>へ！</h1>
-    <p><b>Bookes</b>では、さまざまな書籍に関するあなたの意見や</p>
-    <p>印象を共有し交換することができます</p>
-    <p>
+    <p class="top-text"><b>Bookes</b>では、さまざまな書籍に関するあなたの意見や</p>
+    <p class="top-text">印象を共有し交換することができます</p>
+    <p class="top-text">
       <%= link_to "start", books_path %>
     </p>
   </body>
