--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= form_with model: @book do |f| %>
+
+  <p>Title<br>
+  <%= f.text_field :title %>
+  </p>
+  
+  <p>Body<br>
+  <%= f.text_area :body %>
+  </p>
+  
+  <%= f.submit 'Update Book' %>
+  
+<% end %>
+
+<%= link_to 'Show', @book %>
+|
+<%= link_to 'Back', "/books" %>
+
