--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,28 @@
 <%= stylesheet_link_tag 'index' %>
 
 <h1>Books</h1>
-<% @books.each do |book| %>
-  <p>タイトル</p>
-  <span>
-    <%= link_to book.title %>
-  </span>
-<% end %>
+<table>
+  <thead>
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+  
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to 'Show', book %></td>
+      <td><%= link_to 'Edit', edit_book_path(book) %></td>
+      <td><%= link_to 'Destroy', book, method: :delete, date: { confirm: 'Are you sure?' } %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+
 
 <h3>New book</h3>
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
