--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,50 @@
  *= require_self
  */
 body {
-  font-family: verdana, sans-serif;
+  font-family: verdana, arial, helvetica, sans-serif;
+  margin: 33px;
+}
+
+h1 {
+  font-size: 26px;
+}
+
+.top-text {
+  margin: 33px;
+}
+
+p {
+  font-size: 13px;
+}
+
+.show-p {
+  margin: 33px;
+}
+
+table {
+  font-size: 13px;
+}
+
+th, td {
+  line-height: 18px;
+}
+
+td {
+  padding-bottom: 7px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+th {
+  padding-bottom: 5px;
+}
+
+.flash-message.notice {
+  color: green;
+  margin: 33px;
+  font-size: 13px;
+}
+
+a {
+  font-size: 13px;
 }
