--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,3 @@
-<%= stylesheet_link_tag 'index' %>
-
 <h1>Books</h1>
 <table>
   <thead>
@@ -17,7 +15,7 @@
       <td><%= book.body %></td>
       <td><%= link_to 'Show', book %></td>
       <td><%= link_to 'Edit', edit_book_path(book) %></td>
-      <td><%= link_to 'Destroy', book, method: :delete, "data-confirm" => "Are you sure?", :class => "delete-link" %></td>
+      <td><%= link_to 'Destroy', book, method: :delete, "data-confirm" => "Are you sure?" %></td>
     </tr>
     <% end %>
   </tbody>
