--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,16 +1,7 @@
 <%= stylesheet_link_tag 'show' %>
 
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<p class="show-title"><strong>Title: </strong><%= @book.title %></p>
-<p class="show-body"><strong>Body: </strong><%= @book.body %></p>
+<p class="show-p"><strong>Title: </strong><%= @book.title %></p>
+<p class="show-p"><strong>Body: </strong><%= @book.body %></p>
 
 <%= link_to 'Edit', edit_book_path(@book) %>
 |
